# cmj

./: .babelrc  .bash_history  .dockerignore  .gitignore  Dockerfile  README.md  README.rst  busy-wait.sh  conftest.py  create_admin.py  ddev.sh  django_setup.py  docker-compose.yml  dprodInDev.sh  elasticsearch.yml  gunicorn_docker_start.sh  gunicorn_start.sh  manage.py  ocrmypdf_plugin.py  package-lock.json  package.json  pyproject.toml  pytest.ini  rdev.sh  reset_celery.sh  reset_solr.sh  restore_cmj_dev.sh  run_solr_vectors.py  sapl  security.json  solr_api.py  solr_api_dev.py  solr_api_www2.py  st_app.py  st_app_gemini.py  st_app_ollama.py  st_rag_ollama.py  start.sh  test_st_app.py  udev.sh  (+4 more)
.github/: copilot-instructions.md
.old/: manage.py
__notebooks/: 001_materia_materialegislativa__normalize.ipynb  002_materia_materialegislativa__extrair_dados_sobre_requerimentos.ipynb  0init_file.ipynb  compilacao_dispositivo__analise_e_chunking.ipynb  django_setup.py  lista_tramitacoes_via_api.ipynb  materia_materialegislativa__002_extrair_dados_sobre_requerimentos copy.ipynb  materia_materialegislativa__002_extrair_dados_sobre_requerimentos.ipynb  materia_materialegislativa__003_embedding_resumo_requerimento.ipynb  materia_materialegislativa__004_texto_jornalistico_sobre_projeto.ipynb  materia_materialegislativa__extrair_dados_sobre_requerimentos.ipynb  materia_materialegislativa__normalize.ipynb  materia_materialegislativa__similaridade_entre_requerimentos.ipynb
_frontend/: index.vue
cmj-vue/: .eslintrc.js  README.md  package-lock.json  (+1 more)
cmj-vue-old/: index.html
(+3699 files in other folders)
