[tool.poetry]
name = "cmj3"
version = "3.0.0"
description = "PortalCMJ 3.0"
authors = ["Leandro Roberto <leandroroberto.br@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
django = "3.2.8"
channels = "^3.0.4"
daphne = "^3.0.2"
gunicorn = "^20.1.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^5.0.0"
django-cors-headers = "^3.10.0"
django-extensions = "^3.1.3"
django-environ = "^0.8.1"
celery = "^5.1.2"
psycopg2-binary = "^2.9.1"
django-image-cropping = "^1.6.1"
django-crispy-forms = "^1.13.0"
django-floppyforms = "^1.9.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
